# pb/cart.swagger.json
@@ -51,7 +51,7 @@
         },
         "parameters": [
           {
-            "name": "cartId",
+            "name": "id",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -122,8 +122,9 @@
     "pbAddRequest": {
       "type": "object",
       "properties": {
-        "cart": {
-          "$ref": "#/definitions/pbCart"
+        "id": {
+          "type": "integer",
+          "format": "int32"
         },
         "product": {
           "$ref": "#/definitions/pbProduct"
@@ -134,20 +135,12 @@
         }
       }
     },
-    "pbCart": {
+    "pbGetResponse": {
       "type": "object",
       "properties": {
         "id": {
           "type": "integer",
           "format": "int32"
-        }
-      }
-    },
-    "pbGetResponse": {
-      "type": "object",
-      "properties": {
-        "cart": {
-          "$ref": "#/definitions/pbCart"
         },
         "products": {
           "type": "array",
@@ -218,6 +211,10 @@
         },
         "message": {
           "type": "string"
+        },
+        "id": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     }
